# PaintMask_JUCE-Plugin

./: README.md
PaintMask_Full_Source/: CMakeLists.txt  README.md  README_FIRST.txt
PaintMask_Full_Source/Source/: ColorMapper.cpp  ColorMapper.h  PaintCanvas.cpp  PaintCanvas.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h  ScanEngine.cpp  ScanEngine.h  StateSerializer.cpp  StateSerializer.h  TrialManager.cpp  TrialManager.h
PaintMask_Full_Source/addons/theme_template/: theme.json
PaintMask_Full_Source/docs/: FINAL_RELEASE_CHECKLIST.md  FINAL_STATUS.md  HOST_TEST_MATRIX.md  LITE_VS_STUDIO.md  MODULE_MAP.md  NEXT_STEPS.md  PRODUCTION_STANDARD.md  REPO_GROWTH_NOTES.md  UX_NOTES.md  WHAT_IS_MISSING_TO_SHIP.md
PaintMask_Full_Source/licenses/: LICENSE_NOTE.txt
PaintMask_Full_Source/presets/: demo_paintmask_state.json
PaintMask_Full_Source/prototype/: CONCEPT.md  index.html
